--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -4,6 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient"
     tools:context=".BusinessActivity">
+
+    <TextView
+        android:id="@+id/local_bus_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Local Businesses"
+        android:fontFamily="casual"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:textSize="35sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="221dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/localBus_RecycleView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/local_bus_heading"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
