--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,17 +11,15 @@
         android:id="@+id/loginImage"
         android:layout_width="360dp"
         android:layout_height="218dp"
-        android:layout_marginTop="60dp"
         android:src="@drawable/snowflakegif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/snowChatHeading" />
 
     <LinearLayout
         android:layout_width="386dp"
-        android:layout_height="370dp"
-
+        android:layout_height="400dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
             android:backgroundTint="@color/white"
             android:text="Sign In"
             android:textSize="24dp"
@@ -72,36 +70,79 @@
             app:layout_constraintTop_toBottomOf="@+id/loginImage"
             app:layout_constraintVertical_bias="0.138" />
 
-        <Button
-            android:id="@+id/register_btn"
+
+
+        <TextView
+            android:id="@+id/phone_sign_heading"
             android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:backgroundTint="@color/white"
-            android:text="New User"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="8dp" />
+            android:layout_height="20dp"
+            android:layout_marginBottom="1dp"
+            android:text="Or Sign in using your"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            />
 
         <Button
-            android:id="@+id/reset_pwd_btn"
+            android:id="@+id/phone_login_btn"
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:backgroundTint="@color/white"
-            android:text="Reset Password"
+            android:text="Phone"
             android:textSize="24sp"
             android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/forget_password_link"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginBottom="5dp"
+            android:text="Forgot Password?"
+            android:textAlignment="textEnd"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            />
+
+        <TextView
+            android:id="@+id/new_acc_link"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginBottom="5dp"
+            android:text="Need New account?"
+            android:textAlignment="textEnd"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            />
+
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center|bottom"
-        android:layout_marginStart="190dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="191dp"
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressBar"-->
+<!--        android:layout_width="30dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:layout_gravity="center|bottom"-->
+<!--        android:layout_marginStart="190dp"-->
+<!--        android:layout_marginTop="18dp"-->
+<!--        android:layout_marginEnd="191dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/loginImage"-->
+<!--        android:visibility="gone"/>-->
+
+    <TextView
+        android:id="@+id/snowChatHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="179dp"
+        android:fontFamily="casual"
+        android:text="Snow Chat"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.38"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginImage"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
