--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,33 +7,35 @@
     android:background="@drawable/bg_gradient"
     tools:context=".SignInActivity">
 
+    <include
+        android:id="@+id/chat_toolbar"
+        layout="@layout/app_bar_layout">
+    </include>
+
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/loginImage"
         android:layout_width="360dp"
         android:layout_height="218dp"
-        android:src="@drawable/snowflakegif"
+        android:src="@drawable/chatting"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/snowChatHeading" />
+        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />
+
 
     <LinearLayout
         android:layout_width="386dp"
-        android:layout_height="400dp"
+        android:layout_height="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginImage"
         app:layout_constraintVertical_bias="0.585"
+        android:layout_marginTop="15dp"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Username"
-            />
+
 
         <EditText
             android:id="@+id/email"
@@ -41,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Email"
+            android:inputType="textEmailAddress"
             />
 
         <EditText
@@ -49,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Password"
+            android:inputType="textPassword"
             />
 
         <Button
@@ -75,7 +79,7 @@
         <TextView
             android:id="@+id/phone_sign_heading"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_marginBottom="1dp"
             android:text="Or Sign in using your"
             android:textAlignment="center"
@@ -108,11 +112,11 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginBottom="5dp"
+            android:clickable="true"
             android:text="Need New account?"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -129,20 +133,5 @@
 <!--        app:layout_constraintTop_toBottomOf="@+id/loginImage"-->
 <!--        android:visibility="gone"/>-->
 
-    <TextView
-        android:id="@+id/snowChatHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="179dp"
-        android:fontFamily="casual"
-        android:text="Snow Chat"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.38"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
