--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,13 +7,19 @@
     tools:context=".SettingsActivity"
     android:background="@drawable/bg_gradient">
 
+    <include
+        android:id="@+id/chat_toolbar"
+        layout="@layout/app_bar_layout">
+
+    </include>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
+        android:layout_below="@+id/chat_toolbar"
         android:src="@drawable/profile"
         app:civ_border_width="5dp"
         app:civ_border_color="@color/white"
