--- a/app/src/main/res/layout/activity_snow_chat.xml
+++ b/app/src/main/res/layout/activity_snow_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
-    tools:context=".SnowChatActivity">
+    tools:context=".SnowChat.SnowChatActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
