--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RequestFragment">
+    tools:context=".SnowChat.RequestFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_request_list"
