Snow chat Activity updates

--- a/app/src/main/res/layout/private_message_layout.xml
+++ b/app/src/main/res/layout/private_message_layout.xml
@@ -18,6 +18,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/private_message_profile_image"
+        android:layout_marginStart="8dp"
         android:background="@drawable/receiver_message_layout"
         android:text="receiver message here"
         android:textColor="@android:color/black"
@@ -29,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
+        android:layout_margin="8dp"
         android:layout_alignParentTop="@id/receiver_message_text"
         android:background="@drawable/sender_message_layout"
         android:text="sender messages here"
