--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -13,13 +13,38 @@
 
     </include>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/localBus_RecycleView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/business_toolbar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+    <TextView
+        android:id="@+id/business_intro_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Introduction paragraph explaining the local businesses and how search and
+        expandabale click on each business."
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:paddingStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/business_toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <ScrollView
+        android:id="@+id/business_scrollview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/business_intro_textView"
+        >
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/localBus_RecycleView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
