New snow forecast fragments added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -178,6 +178,8 @@
             android:orientation="vertical"
             android:padding="4dp"
             android:clickable="true"
+            android:onClick="goToSnowSports"
+            android:focusable="true"
             >
 
             <ImageView
