--- a/app/src/main/res/layout/activity_sport.xml
+++ b/app/src/main/res/layout/activity_sport.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SportActivity"
     android:background="@drawable/bg_gradient">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <include
         android:id="@+id/snow_sport_toolbar"
         layout="@layout/app_bar_layout">
-
     </include>
 
     <LinearLayout
@@ -20,6 +22,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="0"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,44 +32,48 @@
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
-            android:id="@+id/snowReportClick"
+            android:id="@+id/Ski"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:background="#673AB7"
-            android:clickable="true"
-
             android:gravity="center"
             android:orientation="vertical"
-
-            android:focusable="true">
+            android:padding="5dp">
 
             <ImageView
-                android:id="@+id/snowImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/blizzard"
-                android:gravity="center"
-                android:tint="#FFFFFF"
+                android:id="@+id/skiImage"
+                android:layout_width="45dp"
+                android:layout_height="41dp"
                 android:clickable="true"
-
-                android:focusable="true" />
+                android:src="@drawable/skier"
+                android:tint="#FFFFFF" />
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+                android:layout_height="1dp" />
 
+            <TextView
+                android:id="@+id/skiLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="Ski"
+                android:textColor="#FFFFFF"
+                android:textSize="8sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
 
         <Space
             android:layout_width="10dp"
             android:layout_height="wrap_content" />
 
         <LinearLayout
-            android:id="@+id/snowSportsClick"
+            android:id="@+id/snowboard"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:background="#673AB7"
             android:gravity="center"
             android:orientation="vertical"
@@ -74,17 +81,25 @@
 
             <ImageView
                 android:id="@+id/sportImage"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="45dp"
+                android:layout_height="41dp"
                 android:clickable="true"
 
-                android:src="@drawable/skier"
+                android:src="@drawable/snowboard"
                 android:tint="#FFFFFF" />
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+                android:layout_height="1dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="Snowboard"
+                android:textColor="#FFFFFF"
+                android:textSize="8sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <Space
@@ -92,28 +107,37 @@
             android:layout_height="wrap_content" />
 
         <LinearLayout
-            android:id="@+id/snpwChatClick"
+            android:id="@+id/sledging"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:background="#FF5722"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="5dp"
             android:clickable="true"
-
             android:focusable="true">
 
             <ImageView
                 android:id="@+id/chatImage"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/snowboard"
+                android:scaleType="fitXY"
+                android:src="@drawable/sledgeimage"
                 android:tint="#FFFFFF" />
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+                android:layout_height="1dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="Sledging"
+                android:textColor="#FFFFFF"
+                android:textSize="8sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -122,10 +146,10 @@
             android:layout_height="wrap_content" />
 
         <LinearLayout
-
+            android:id="@+id/hillWalking"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:background="#18DF13"
             android:gravity="center"
             android:orientation="vertical"
@@ -138,12 +162,21 @@
 
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/sledge"
+                app:srcCompat="@drawable/hillwalking"
                 android:tint="#FFFFFF" />
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+                android:layout_height="1dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="Hill Walking"
+                android:textColor="#FFFFFF"
+                android:textSize="8sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -152,10 +185,11 @@
             android:layout_height="wrap_content" />
 
         <LinearLayout
+            android:id="@+id/lessons"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:background="#3CF1EBF1"
+            android:layout_weight="0.4"
+            android:background="#FF0000"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="5dp"
@@ -163,23 +197,35 @@
 
             <ImageView
 
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_chat_black_24dp"
+                android:src="@drawable/teacher"
                 android:tint="#FFFFFF" />
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+                android:layout_height="1dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="Ski School"
+                android:textColor="#FFFFFF"
+                android:textSize="8sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/pistemap_image"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_marginTop="20dp"
+        android:scaleType="fitXY"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@id/imageLinearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -201,13 +247,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#5148E4">
+
+            android:layout_marginBottom="10dp"
+            >
 
             <LinearLayout
                 android:id="@+id/ski_description_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:background="#673AB7"
                 >
 
                 <LinearLayout
@@ -219,13 +268,16 @@
                     <ImageView
                         android:id="@+id/snowboarder_image"
                         android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_margin="5dp"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:layout_marginRight="5dp"
+                        android:tint="#64000000"
                         android:src="@drawable/snowboarder"/>
 
                     <LinearLayout
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
+                        android:padding="5dp"
                         android:orientation="vertical">
                     <TextView
                         android:id="@+id/ski_heading"
@@ -251,6 +303,10 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="5dp" />
+
             <LinearLayout
                 android:id="@+id/sledging_description_layout"
                 android:layout_width="match_parent"
@@ -265,16 +321,10 @@
                     android:orientation="horizontal"
                     >
 
-                    <ImageView
-                        android:id="@+id/sledger_image"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_margin="5dp"
-                        android:src="@drawable/snowboarder"/>
-
                     <LinearLayout
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
+                        android:padding="5dp"
                         android:orientation="vertical">
                         <TextView
                             android:id="@+id/sledger_heading"
@@ -298,9 +348,21 @@
 
                     </LinearLayout>
 
+                    <ImageView
+                        android:id="@+id/sledger_image"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:layout_marginLeft="5dp"
+                        android:src="@drawable/glencoe_sledge"/>
+
                 </LinearLayout>
 
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="5dp" />
 
             <LinearLayout
                 android:id="@+id/hillwalker_description_layout"
@@ -319,13 +381,15 @@
                     <ImageView
                         android:id="@+id/hillwalker_image"
                         android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
                         android:layout_margin="5dp"
-                        android:src="@drawable/snowboarder"/>
+                        android:src="@drawable/hillwalkers"/>
 
                     <LinearLayout
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
+                        android:padding="5dp"
                         android:orientation="vertical"
                         >
                         <TextView
@@ -353,9 +417,149 @@
 
             </LinearLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="5dp" />
+
+            <LinearLayout
+                android:id="@+id/lessons_description_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#FF0000"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/lessons_heading"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="LESSONS"
+                            android:textSize="18sp"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:fontFamily="casual"
+                            />
+
+                        <TextView
+                            android:id="@+id/lessons_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:text="Description of the ski and snowboard facilities aat glencoe mountain
+                        the vertical runs and other details like the names of the runs. BlahBlahBlahBlahBlah
+                        BlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlahBlah"/>
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/lessons_image"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:scaleType="fitXY"
+                        android:layout_marginLeft="5dp"
+                        android:src="@drawable/getting_lesson"/>
+
+                </LinearLayout>
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:background="@color/semiTransparentColor">
+
+
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Description"
+                            android:layout_weight="1"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Price (£)"
+                            android:layout_weight="1"
+                            />
+
+                    </TableRow>
+
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Description"
+                            android:layout_weight="1"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Price (£)"
+                            android:layout_weight="1"
+                            />
+
+                    </TableRow>
+
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Description"
+                            android:layout_weight="1"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Price (£)"
+                            android:layout_weight="1"
+                            />
+
+                    </TableRow>
+
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Description"
+                            android:layout_weight="1"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:text="Price (£)"
+                            android:layout_weight="1"
+                            />
+
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
