--- a/app/src/main/res/menu/snow_report_menu.xml
+++ b/app/src/main/res/menu/snow_report_menu.xml
@@ -44,4 +44,11 @@
         >
     </item>
 
+    <item
+        android:id="@+id/menu_ads_option"
+        android:title="Ads"
+        app:showAsAction="never"
+        >
+    </item>
+
 </menu>
